tests/baselines/reference/genericTypeWithMultipleBases3.errors.txt
genericTypeWithMultipleBases3.ts(17,9): error TS2454: Variable 'c' is used before being assigned.
genericTypeWithMultipleBases3.ts(19,9): error TS2454: Variable 'c' is used before being assigned.


==== genericTypeWithMultipleBases3.ts (2 errors) ====
    interface IA<T> {
    
    foo(x: T): T;
    
    }
    
    interface IB<T> {
    
    bar(x: T): T;
    
    }
    
    interface IC<T> extends IA<T>, IB<T> { }
    
    var c: IC<number>;
    
    var x = c.foo;
            ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    var y = c.bar;
            ~
!!! error TS2454: Variable 'c' is used before being assigned.
    